2016-04-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCasm.c:
	  Hex number case consistency, RFE #142.

2016-04-29 Philipp Klaus Krause <pkk AT spth.de>

	* src/z80/gen.c,
	  doc/sdccman.lyx,
	  .version:
	  Reorganize interrupt handling for z80-related backends, fix bugs #2339, #2131.

2016-04-29 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCerr.c
	* src/SDCCerr.h
	  Make the warning in previous commit more generic.

2016-04-28 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCerr.c
	* src/SDCCerr.h
	  Add warning for inlined _z88dk_* functions.

2016-04-28 Ben Shi <powerstudio1st AT 163 DOT com>
	* src/SDCC.y
	* src/SDCCerr.c
	  Allow typedef function types.
	* support/regression/tests/bug-2497.c
	  Add a new test case.

2016-04-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/gen.c (genFarPointerSet): no inline variable definitions
	* src/ds390/main.c (_ds390_genAssemblerPreamble, _ds390_genIVT): add MCON,
	  (_ds390_genXINIT): added _ds390_genXRAMCLEAR

>>>>>>> .r9581
2016-04-25 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCC.y
	* src/SDCCsymt.c
	* src/SDCCsymt.h
	  Check local defined structs more strictly.

2016-04-24 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/SDCCast.c
	  Change the signess of the literal operand in bitwise operation.
	* support/regression/tests/bug-1929.c
	  Add a new test case.
	* support/regression/tests/gcc-torture-execute-20020506-1.c
	  Modify test case.

2016-04-21 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/sdbinutils/bfd/doc/Makefile.am,
	  support/sdbinutils/bfd/doc/Makefile.in,
	  support/sdbinutils/binutils/Makefile.am,
	  support/sdbinutils/binutils/Makefile.in:
	  Revert changes of wrong bugfix.

2016-04-20 Ben Shi <powerstudio1st AT 163 DOT com>

	* src/z80/peeph-r2k.def
	* src/z80/peeph-tlcs90.def
	* src/z80/peeph-z80.def
	  Fix potential bugs.

2016-04-19 Molnar Karoly <molnarkaroly AT users.sf.net>

	* support/sdbinutils/bfd/doc/Makefile.am,